# ChangeLog for kde-base/krdc
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/krdc/ChangeLog,v 1.124 2009/06/07 02:52:35 jmbsvicetto Exp $

  07 Jun 2009; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  krdc-4.2.4.ebuild:
  Improved the postinst warning about rdesktop.

  07 Jun 2009; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  krdc-4.2.4.ebuild:
  Added a postinst message warning users they need to install
  net-misc/rdesktop in case
  the want to connect through RDP to remote systems.

  06 Jun 2009; Markus Meier <maekke@gentoo.org> krdc-3.5.10.ebuild:
  amd64/x86 stable, bug #271889

  05 Jun 2009; Alexey Shvetsov <alexxy@gentoo.org> krdc-4.2.4.ebuild:
  Fix accidently added keywords

*krdc-4.2.4 (04 Jun 2009)

  04 Jun 2009; Alexey Shvetsov <alexxy@gentoo.org> +krdc-4.2.4.ebuild:
  Version bump

  03 Jun 2009; Alexey Shvetsov <alexxy@gentoo.org> -krdc-4.2.2.ebuild:
  Drop KDE 4.2.2

  03 Jun 2009; Brent Baude <ranger@gentoo.org> krdc-3.5.10.ebuild:
  Marking krdc-3.5.10 ppc64 stable for bug 271889

  31 May 2009; nixnut <nixnut@gentoo.org> krdc-3.5.10.ebuild:
  ppc stable #271889

*krdc-4.2.3 (06 May 2009)

  06 May 2009; Tomas Chvatal <scarabeus@gentoo.org> +krdc-4.2.3.ebuild:
  Version bump

  17 Apr 2009; Alexey Shvetsov <alexxy@gentoo.org> -krdc-4.2.1.ebuild,
  krdc-4.2.2:
  Restore ~hppa keywords

  16 Apr 2009; Alexey Shvetsov <alexxy@gentoo.org> -krdc-4.2.1.ebuild:
  Drop KDE 4.2.1

*krdc-4.2.2 (11 Apr 2009)

  11 Apr 2009; Alexey Shvetsov <alexxy@gentoo.org> +krdc-4.2.2.ebuild:
  Add KDE 4.2.2

  11 Apr 2009; Raúl Porcel <armin76@gentoo.org> krdc-4.2.1.ebuild:
  Add ~alpha/~ia64 wrt #260777

  08 Mar 2009; Alexey Shvetsov <alexxy@gentoo.org> -krdc-4.2.0.ebuild:
  Drop KDE 4.2.0

  08 Mar 2009; Tomas Chvatal <scarabeus@gentoo.org> krdc-4.2.1.ebuild:
  Semi-automatic merge, Update deps.

*krdc-4.2.1 (04 Mar 2009)
