@@ -5,6 +5,6 @@ DIST kdenetwork-4.2.4.tar.bz2 7038448 RMD160 2ea29be5b112af974add898419403c9d8ce
 EBUILD krdc-3.5.10.ebuild 677 RMD160 46c95530afaa067205be4d07d1384c2f173faa6c SHA1 ec48c51f70cf34eb00a4f0e3168221dc1449d53c SHA256 87834283c6b6011f0ce90156070c880c1123cfb763665887bfb29e08432115fc
 EBUILD krdc-3.5.9.ebuild 672 RMD160 6f7166c5ffb366f4ae1f3cb6a5b4d941f97c11ae SHA1 1bd437743667d199b89d02d30bac530d2d3b7e9d SHA256 255fafd9ecac69c98f481ce5a5260c05ad0772b355f1a49166e8c3b7e5276baf
 EBUILD krdc-4.2.3.ebuild 965 RMD160 2c61333f8ba7d128744cc877e5234c7a2242e9e7 SHA1 63786933a5e0c4f3b9d39821c46f66ad2147ca29 SHA256 4af89a498be1e26a5555f1e50208a9de9a2dde2a29100da107e0a13e4031d903
-EBUILD krdc-4.2.4.ebuild 1080 RMD160 5019639e1612061fc62394d2e7ab08ce8a3f1283 SHA1 578a153a5472f983db704533138932f70b598926 SHA256 0c2263b5ed1d887816bd8440e0cf20e9b97ee6f4c1cee7cc8689143d3c7675b3
-MISC ChangeLog 14979 RMD160 5c51c1662f04261bbd8c956620d6a9d9c854cb59 SHA1 65626de18e791a662197668fd452e421c9db984a SHA256 d440fcd70a44367e31e3ae7c41aabb0db784e8ad185fd836e1c600e4f7518ef6
+EBUILD krdc-4.2.4.ebuild 1152 RMD160 5e917e5acc655146fde040922faa87ad532ac6a9 SHA1 18797b4e46bb2cc6777329bdcdd1778147066a44 SHA256 61a5ec46a931f72de344a5d1c72dab99099dd96610de69bec54db5378233264b
+MISC ChangeLog 15142 RMD160 388f80ecb88230da46729082ebd02dea54409027 SHA1 24335cda307eeb0f39ff5b2596766bfc8d753866 SHA256 56736459a735ffae8a1cd76ec60bb7dcd4d543d2c2778d1ce5961d60e009febe
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
