@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/krdc/krdc-4.2.4.ebuild,v 1.4 2009/06/07 02:52:35 jmbsvicetto Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/krdc/krdc-4.2.4.ebuild,v 1.5 2009/06/07 04:52:04 jmbsvicetto Exp $
 
 EAPI="2"
 
@@ -26,15 +26,20 @@ DEPEND="
 "
 RDEPEND="${DEPEND}"
 
-src_compile() {
+src_configure() {
 	mycmakeargs="${mycmakeargs}
 		$(cmake-utils_use_with jpeg JPEG)
 		$(cmake-utils_use_with vnc LibVNCServer)
 		$(cmake-utils_use_with zeroconf DNSSD)"
 
-	kde4-meta_src_compile
+	kde4-meta_src_configure
 }
 
 pkg_postinst() {
-	elog "If you want to use the remote desktop protocol (RDP) install net-misc/rdesktop"
+	kde4-meta_pkg_postinst
+
+	echo
+	elog "To be able to connect using RDP protocol, install net-misc/rdesktop:"
+	elog "    emerge -va net-misc/rdesktop"
+	echo
 }
